[package]
name = "conductor"
version = "0.1.1"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "A little utility to restart your docker compose projects"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
axum = { version = "0.6", features = ["headers"] }
toml = "0.8"
